--- a/styles.css
+++ b/styles.css
@@ -72,7 +72,7 @@ i {
 .recorder {
     display: flex;
     flex-direction: column;
-    width: 275px;
+    width: 330px;
     background-color: #fff;
     align-items: center;
 }
@@ -97,7 +97,8 @@ i {
 
 .recorder__controls--record,
 .recorder__controls--stop,
-.recorder__controls--redo {
+.recorder__controls--redo,
+.recorder__controls--save {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -135,6 +136,14 @@ i {
 
 .recorder__controls--redo--btn {
     background-color: #000;
+}
+
+.recorder__controls--save--btn {
+    display: flex;
+    border: 1px solid black;
+    font-size: 30px;
+    justify-content: center;
+    align-items: center;
 }
 
 
@@ -269,24 +278,6 @@ input[type="range"]::-ms-thumb {
 input[type="range"]:active::-ms-thumb {
     transform: scale(1.2);
     background: #007db5;
-}
-
-
-/* save button */
-
-.recorder__save {
-    margin-bottom: 1rem;
-    height: 40px;
-}
-
-.recorder__save--btn {
-    background-color: #fff;
-    width: 200px;
-    border: none;
-    border-radius: 25px;
-    padding: .75rem .35rem;
-    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    cursor: pointer;
 }
 
 
